整理頁面，新增Info詳細頁

--- a/src/styles/views/header.scss
+++ b/src/styles/views/header.scss
@@ -124,6 +124,7 @@
         }
         a {
             text-decoration: none;
+            cursor: pointer;
             display: block;
             color: $color_header_menu;
             transition: 0.1s ease;
